Add basic html file

--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <link rel="stylesheet" href="./style/style.css">
+    <title>Live rate API</title>
 </head>
 
 <body>
-
-
+    <section class="container">
+        <ul class="country">
+            <li class="country__list">
+                <a href="#">
+                    <img src="./images/germany.svg" id="poland" alt="Germany">
+                    <span>Germany EUR </span>
+                </a>
+            </li>
+            <li class="country__list">
+                <a href="#">
+                    <img src="./images/poland.svg" id="usa" alt="Poand">
+                    <span>Polish PLN</span>
+                </a>
+            </li>
+        </ul>
+        <div class="country__chart">
+            <canvas id="myChart"></canvas>
+        </div>
+    </section>
     <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
             href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </body>
