update html file & name of file in style

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <ul class="country">
             <li class="country__list">
                 <a href="#">
-                    <img src="./images/germany.svg" id="poland" alt="Germany">
+                    <img src="./assets/images/germany.svg" id="germany" alt="Germany-flag">
                     <span>Germany EUR </span>
                 </a>
             </li>
             <li class="country__list">
                 <a href="#">
-                    <img src="./images/poland.svg" id="usa" alt="Poand">
+                    <img src="./assets/images/poland.svg" id="poland" alt="Poand">
                     <span>Polish PLN</span>
                 </a>
             </li>
