--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <ul class="country">
             <li class="country__list">
                 <a href="#">
-                    <img src="./assets/images/germany.svg" id="germany" alt="Germany-flag">
+                    <img src="./assets/images/germany.svg" id="germany" class="country__flag" alt="Germany-flag">
                     <span>Germany EUR </span>
                 </a>
             </li>
             <li class="country__list">
                 <a href="#">
-                    <img src="./assets/images/poland.svg" id="poland" alt="Poand">
+                    <img src="./assets/images/poland.svg" class="country__flag" id="poland" alt="Poand">
                     <span>Polish PLN</span>
                 </a>
             </li>
@@ -29,9 +29,10 @@
         <div class="country__chart">
             <canvas id="myChart"></canvas>
         </div>
+        <div class="attriute">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </section>
-    <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
-            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
 </body>
 
 </html>
