Add javascript for project

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </section>
 
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
