Add javascript fetch api, and show chart

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </li>
         </ul>
         <div class="country__chart">
-            <canvas id="myChart"></canvas>
+            <canvas id="myChart" class="canvas"></canvas>
         </div>
         <div class="attriute">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
                 href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
